--- a/estate_property/views/estate_property_offer_views.xml
+++ b/estate_property/views/estate_property_offer_views.xml
@@ -11,8 +11,6 @@
               <field name="partner_id"/>
               <field name="validity"/>
               <field name="date_deadline"/>
-              <button name="action_accepted" type="object" icon="fa-check"/>
-              <button name="action_refused" type="object" icon="fa-times"/>
               <field name="status"/>
           </tree>
       </field>
@@ -29,8 +27,8 @@
                 <field name="partner_id"/>
                 <field name="validity"/>
                 <field name="date_deadline"/>
-                <button name="action_accepted" type="object" icon="fa-check"/>
-                <button name="action_refused" type="object" icon="fa-times"/>
+                <button name="action_accepted" type="object" icon="fa-check" attrs="{'invisible': [('status', 'in', ['accepted', 'refused'])]}"/>
+                <button name="action_refused" type="object" icon="fa-times" attrs="{'invisible': [('status', 'in', ['accepted', 'refused'])]}"/>
                 <field name="status"/>
               </group> 
             </sheet>
