--- a/estate_property/views/estate_property_views.xml
+++ b/estate_property/views/estate_property_views.xml
@@ -27,11 +27,15 @@
       <field name="arch" type="xml">
           <form>
             <header>
-              <button name="action_sold" type="object" string="Sold"/>
-              <button name="action_cancel" type="object" string="Cancel"/>
+              <button name="action_receive" states="new" type="object" string="Received"/>
+              <button name="action_accept" states="offer_received" type="object" string="Accepted"/>
+              <button name="action_sold" states="offer_accepted" type="object" string="Sold"/>
+              <button name="action_draft" states="sold" type="object" string="Draft"/>
+              <button name="action_cancel" attrs="{'invisible': [('state','=', 'sold')]}" type="object" string="Cancel"/>
               <field name="state" widget="statusbar" statusbar_visible="new,offer_received,offer_accepted,sold,canceled"/>
             </header>
             <sheet>
+              <widget name="web_ribbon" title="Archived" bg_color="bg-danger" attrs="{'invisible': [('active', '=', True)]}"/>
               <div class="oe_title">
                 <div class="oe_edit_only">
                     <label for="name"/>
@@ -79,8 +83,8 @@
                       <field name="validity" />
                       <field name="date_deadline" />
                       <field name="status" invisible="1" />
-                      <button name="action_accepted" type="object" icon="fa-check"/>
-                      <button name="action_refused" type="object" icon="fa-times"/>
+                      <button name="action_accepted" type="object" icon="fa-check" attrs="{'invisible': [('status', 'in', ['accepted', 'refused'])]}"/>
+                      <button name="action_refused" type="object" icon="fa-times" attrs="{'invisible': [('status', 'in', ['accepted', 'refused'])]}"/>
                     </tree>
                   </field>
                 </page>
@@ -117,12 +121,49 @@
           </search>
       </field>
     </record>
+
+    <record id="estate_property_view_kanban" model="ir.ui.view">
+      <field name="name">estate.property.kanban</field>
+      <field name="model">estate.property</field>
+      <field name="arch" type="xml">
+        <kanban default_group_by="property_type_id" on_create="quick_create" records_draggable="false" sample="1" group_create="false">
+          <field name="state" />
+          <field name="expected_price" />
+          <field name="best_price" />
+          <field name="selling_price" />
+          <templates>
+            <t t-name="kanban-box">
+              <div class="oe_kanban_global_click">
+                <field name="name" />
+                <!-- <div class="row"> -->
+                  <div class="col-12 text-muted"> Expected Price: <t
+                      t-esc="record.expected_price.value" />
+                  </div>
+                <!-- </div> -->
+                <div t-if="record.state.raw_value == 'offer_received'"> Best Offer: <t
+                    t-esc="record.best_price.value" />
+                </div>
+                <div t-if="record.state.raw_value == 'offer_accepted'"> Selling Price: <t
+                    t-esc="record.selling_price.value" />
+                </div>
+                <div>
+                  <span class="oe_kanban_list_many2many">
+                    <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}" />
+                  </span>
+                </div>
+              </div>
+            </t>
+          </templates>
+        </kanban>
+      </field>
+    </record>
+  
     <!-- server action to the one above -->
 
     <record id="estate_property_action" model="ir.actions.act_window">
         <field name="name">Estate Property</field>
         <field name="res_model">estate.property</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,form,kanban</field>
         <field name="context">{'search_default_available': 1}</field>
     </record>
 
